Fix docs deployment

--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.6.0"
+    "babel-preset-env": "^1.6.0",
+    "gh-pages": "^1.0.0"
   },
   "scripts": {
     "build": "NODE_ENV=production babel src -d dist",
     "storybook": "start-storybook -p 9009 -c stories",
-    "build-storybook": "cd stories && yarn install && cd .. && build-storybook -c stories -o docs",
-    "deploy": "gh-pages -d docs",
+    "build-docs": "cd stories && yarn install && cd .. && build-storybook -c stories -o docs",
+    "deploy-docs": "gh-pages -d docs",
     "preversion": "yarn build",
-    "postpublish": "yarn build-storybook && yarn deploy"
+    "postpublish": "yarn build-docs && yarn deploy-docs"
   }
 }
