--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "mui-downshift",
   "version": "0.0.4",
+  "author": "Sean Lynch <techniq35@gmail.com>",
+  "license": "MIT",
+  "repository": "techniq/mui-downshift",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.js",
   "dependencies": {
     "downshift": "^1.4.0",
     "material-ui": "^0.19.1",
