--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "material-ui": "^0.19.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-popper": "^0.7.3",
+    "react-travel": "^1.3.5",
     "react-virtualized": "^9.9.0"
   },
   "devDependencies": {
