--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "dist"
   ],
   "main": "dist/index.js",
+  "peerDependencies": {
+    "material-ui": ">= 0.19.0 < 1.0.0",
+    "react": ">=15"
+  },
   "dependencies": {
     "downshift": "^1.14.0",
-    "material-ui": "^0.19.4",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
     "react-popper": "^0.7.3",
     "react-travel": "^1.3.5",
     "react-virtualized": "^9.11.1"
@@ -25,7 +26,10 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.0",
-    "gh-pages": "^1.0.0"
+    "gh-pages": "^1.0.0",
+    "material-ui": "^0.19.4",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2"
   },
   "scripts": {
     "build": "NODE_ENV=production babel src -d dist",
