--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "main": "dist/index.js",
   "peerDependencies": {
-    "material-ui": ">= 0.19.0 < 1.0.0",
+    "material-ui": "^1.0.0-beta.27",
+    "material-ui-icons": "^1.0.0-beta.17",
     "react": ">=15"
   },
   "dependencies": {
@@ -27,7 +28,9 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "gh-pages": "^1.0.0",
-    "material-ui": "^0.19.4",
+    "material-ui": "^1.0.0-beta.27",
+    "material-ui-icons": "^1.0.0-beta.17",
+    "prop-types": "^15.6.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2"
   },
