--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": ">=15"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "downshift": "^1.22.5",
     "react-popper": "^0.7.3",
     "react-travel": "^1.3.5",
