--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mui-downshift",
-  "version": "0.0.19",
+  "version": "1.0.0-0",
   "author": "Sean Lynch <techniq35@gmail.com>",
   "license": "MIT",
   "repository": "techniq/mui-downshift",
