--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.0",
+    "fetch-mock": "^6.0.1",
     "gh-pages": "^1.0.0",
     "material-ui": "^1.0.0-beta.32",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
     "react": "^15.6.2",
-    "react-dom": "^15.6.2"
+    "react-dom": "^15.6.2",
+    "react-fetch-component": "^5.1.2",
+    "starwars-names": "^1.6.0"
   },
   "scripts": {
     "build": "NODE_ENV=production babel src -d dist",
