--- a/package.json
+++ b/package.json
@@ -31,18 +31,22 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.0",
+    "core-js": "^2.5.5",
     "eslint": "^4.18.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
+    "fetch-mock": "^6.3.0",
     "gh-pages": "^1.0.0",
     "material-ui": "^1.0.0-beta.41",
     "prettier": "^1.11.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-fetch-component": "^5.4.1",
+    "starwars-names": "^1.6.0"
   },
   "scripts": {
     "build": "NODE_ENV=production babel src -d dist",
