--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   ],
   "main": "dist/index.js",
   "peerDependencies": {
-    "@material-ui/icons": "^1.0.0-beta.42",
-    "material-ui": "^1.0.0-beta.41",
+    "@material-ui/core": "^1.0.0",
+    "@material-ui/icons": "^1.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
@@ -22,7 +22,8 @@
     "react-virtualized": "^9.18.5"
   },
   "devDependencies": {
-    "@material-ui/icons": "^1.0.0-beta.42",
+    "@material-ui/core": "^1.0.0",
+    "@material-ui/icons": "^1.0.0",
     "@storybook/addon-actions": "^3.2.6",
     "@storybook/react": "^3.2.8",
     "babel-cli": "^6.26.0",
@@ -38,7 +39,6 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "gh-pages": "^1.0.0",
-    "material-ui": "^1.0.0-beta.41",
     "prettier": "^1.11.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
