--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
+    "fetch-mock": "7.3.9",
     "gh-pages": "^1.2.0",
     "prettier": "^1.14.2",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-fetch-component": "7.0.1",
+    "starwars-names": "1.6.0"
   },
   "scripts": {
     "build": "NODE_ENV=production babel src -d dist",
