--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "printWidth": 120,
   "singleQuote": true,
   "trailingComma": "all",
-  "parser": "babylon",
+  "parser": "babel",
   "semi": true,
   "jsxBracketSameLine": false
 }
